# pdata

./: .gitignore  INFODB  Makefile.am  README.md  configure.ac
atdb/: atdb.c  atdb.h  atdb_blob.c  atdb_blob.h  atdb_io.c  atdb_io.h  atdb_lowlevel.c
attribute/: attribute.c  attribute.h  attribute_api.c  attribute_api.h  attribute_db.c  attribute_db.h  attribute_format.c  attribute_format_test.c  attribute_target.c  attribute_test.sh  attribute_util.c  attribute_util.h  test.dts  test_info.db
attribute/old/: attribute.c  attribute.h  attribute_format.h  attribute_list.c  attribute_list.h  attribute_target.h
common/: dtree.c  dtree.h
data/p10/: FAPITargetsNameMapList.lsv  attribute_types_obmc.xml  bmc_customized_ekb_attrs.xml  filter_AttributesList.lsv  filter_TargetsList.lsv  pdbg_compatible_propMapping.lsv  preserved_attrs_list  rainier_FilterAttributesList.lsv  reinit_devtree_attrs_list  reqEkbAttrsXmlFileList.lsv  target_types_obmc.xml
docs/: add_new_attribute.md  add_new_target.md  new_power_proc_cec_devtree.md  pdata_deliverables_usage.md
dts/: p9.dts
fdt/: fdt_attr.c  fdt_attr.h  fdt_error.c  fdt_error.h  fdt_prop.c  fdt_prop.h  fdt_traverse.c  fdt_traverse.h
libdt-api/: dt_api.C  dt_api.H  libdt-api.pc.in
libdtm/: dtm.c  dtm.h  dtm_file.c  dtm_internal.h  dtm_io.c  dtm_node.c  dtm_nodelist.c  dtm_property.c  dtm_search.c  dtm_traverse.c  dtm_tree.c
libdtree/: dtree.h  dtree_attr.c  dtree_attr.h  dtree_attr_list.c  dtree_attr_list.h  dtree_cronus.c  dtree_cronus.h  dtree_cronus_format.c  dtree_cronus_target.c  dtree_dump.h  dtree_dump_format.c  dtree_export.c  dtree_import.c  dtree_infodb.c  dtree_infodb.h  dtree_util.c  dtree_util.h
scripts/: BusFruCallouts.pm  Targets.pm  dt_generate.sh  filterXML.pl  genAttrsHeaderFile.pl  genAttrsInfoDB.pl  genDTS.pl  mapTgtsAttrs.pl  mergeMRWFormatXml.sh  parseIntermediateXMLUtils.pl  processEkbAttrsXML.pl  processMrw.pl  processMrw_bmc.pm  utils.pl
tools/: attribute.c  attribute.h  translate.c  translate.h
